# zha-binding-manager

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.example.json  pyproject.toml
docs/: ARCHITECTURE.md  CLAUDE.md  DEV-SETUP.md  QUICK-REFERENCE.md  usage.md
src/zha_binding_manager/: __init__.py  __main__.py  manager.py
tests/unit/: test_diff.py
