[project]
name = "zha-binding-manager"
version = "0.2.0"
description = "Query, edit, validate, and apply Zigbee binding and group configurations against a Home Assistant / ZHA network."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Plum Solutions" }]
dependencies = [
    "websockets>=12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
zha-manager = "zha_binding_manager.manager:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zha_binding_manager"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
